--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
 # initial upload
 GUI
-![20250110_120321](https://github.com/user-attachments/assets/08e5a217-bfbe-44a6-b252-69a5353dd8e3)
+![TX7332_Gen_GUI](./img/20250110_120321.png)
