--- a/readme
+++ b/readme
@@ -1,5 +1,3 @@
 # initial upload
 GUI
-![TX7332_Gen_GUI](./img/20250110_120321.png)
-
-<img src="https://github.com/hyunsub-shin/TX7332_Delay_Reg_Gen/blob/main/img/20250110_120321.png">
+![TX7332_Gen_GUI](img/20250110_120321.png)
