--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
 # initial upload
 GUI
-![TX7332_Gen_GUI](https://github.com/hyunsub-shin/TX7332_Delay_Reg_Gen/raw/main/img/20250110_120321.png)
+![TX7332_Gen_GUI](images/20250110_120321.png)
